Handle missing --add-opens (#78)